# psx-emu

./: .gitignore  Cargo.toml  LICENSE  README.md
desktop/: Cargo.toml
desktop/src/: app.rs  input.rs  main.rs
desktop/src/components/: breakpoints.rs  control.rs  disassembly.rs  display.rs  kernel_logger.rs  mod.rs  tty_logger.rs  vram.rs
psx/: Cargo.toml
psx/src/: bus.rs  cdrom.rs  dma.rs  gpu.rs  interrupts.rs  kernel.rs  lib.rs  mdec.rs  scheduler.rs  sio0.rs  spu.rs  timers.rs
psx/src/cdrom/: commands.rs  disc.rs  mod.rs  xa_apdcm.rs
psx/src/cpu/: cop0.rs  gte.rs  instructions.rs  mod.rs
src/: bus.rs  main.rs
src/cpu/: cop0.rs  instructions.rs  mod.rs
