[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
default-run = "desktop"

[dependencies]
psx = { path = "../psx"}
# accesskit needs to be disabled to fix a crash
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = "0.31.1"
egui_dock = "0.16.0"
rcue = "0.1.3"
rfd = "0.15.3"
rodio = "0.21.1"
env_logger = { workspace = true }
log = { workspace = true }